--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
+      background-color: #ffe4e1; /* Светло-розовый фон */
       margin: 0;
       padding: 0;
     }
@@ -14,13 +14,13 @@
       margin: auto;
       padding: 20px;
       background-color: #fff;
-      border-radius: 5px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       margin-top: 50px;
     }
     h1 {
       text-align: center;
-      color: #333;
+      color: #ff69b4; /* Ярко-розовый */
     }
     .input-group {
       margin-bottom: 15px;
@@ -34,11 +34,11 @@
       width: 100%;
       padding: 10px;
       margin-bottom: 10px;
-      border: 1px solid #ccc;
+      border: 1px solid #ddd;
       border-radius: 4px;
     }
     .btn {
-      background-color: #4CAF50;
+      background-color: #ff69b4;
       color: white;
       border: none;
       padding: 10px;
@@ -46,20 +46,20 @@
       width: 100%;
     }
     .btn:hover {
-      background-color: #45a049;
+      background-color: #ff1493;
     }
     p {
       text-align: center;
     }
     a {
-      color: #4CAF50;
+      color: #ff69b4;
       text-decoration: none;
     }
   </style>
 </head>
 <body>
 <div class="container">
-  <h1>Login</h1>
+  <h1>Авторизация</h1>
   <form th:action="@{/web/auth/login}" method="post">
     <div class="input-group">
       <label for="username">Username</label>
